--- a/server/package.json
+++ b/server/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "start": "npm start index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Avinash Pandey",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2",
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "mongoose": "^8.2.0",
     "nodemon": "^3.1.0"
   }
 }
